
  * data/debhelper/dh_addons-manual:
    + [JW] Add python3-sphinx as provider of sphinxdoc dh sequence.
  * data/debhelper/dh_commands-manual:
    + [JW] Add python3-sphinx as provider of dh_sphinxdoc.
      (Closes: #649640)

  * lib/Lintian/Collect/{Binary,Source}.pm:
    + [NT] Assume packages to be non-native when it cannot be
      accurately determined due to missing version field.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed assumption that source packages always have a
      format field.
  * lib/Lintian/Processable/Package.pm:
    + [NT] Use part of the file name as package name if the mandatory
      "Package" or "Source" fields are missing rather than choking.

 -- Niels Thykier <niels@thykier.net>  Tue, 29 Nov 2011 18:42:37 +0100

lintian (2.5.4) unstable; urgency=medium

  The "perl5.14 (+ misc) fix"-upload.  Medium as perl 5.14
  deprecation warnings tend to make Lintian output unreadable.

  * Summary of tag changes:
    + Added:
      - data.tar.xz-member-without-dpkg-pre-depends
      - gzip-file-is-not-multi-arch-same-safe
      - init.d-script-does-not-implement-optional-option
      - init.d-script-missing-lsb-description
      - maintainer-address-causes-mail-loops-or-bounces
      - missing-build-dependency-for-dh-addon
      - package-depends-on-lower-priority-package
      - package-would-benefit-from-build-arch-targets
      - python-depends-but-no-python-helper
      - python3-depends-but-no-python3-helper
      - transitional-package-should-be-oldlibs-extra
      - uploader-address-causes-mail-loops-or-bounces

  * checks/*:
    + [JW] Replace common_data.pm with Lintian::Check.
    + [NT] Remove some unused "use lib <expr>" from various checks.
    + [NT] Use Lintian::Collect::Group to find direct dependencies.
  * checks/binaries:
    + [JW] Allow binaries to use "/usr/lib/$srcpkg/" in RPATHs.
      (Closes: #642092)
    + [JW] Fixed a false-positive when using the multiarch dir in
      RPATH.  (Closes: #646817)