@@ -22,6 +22,9 @@ lintian (2.5.5) UNRELEASED; urgency=low
   * lib/Lintian/Collect/{Binary,Source}.pm:
     + [NT] Assume packages to be non-native when it cannot be
       accurately determined due to missing version field.
+  * lib/Lintian/Collect/Binary.pm:
+    + [NT] Fixed an error in parsing symbol names when using readelf
+      as replacement for objdump.
   * lib/Lintian/Collect/Source.pm:
     + [NT] Removed assumption that source packages always have a
       format field.
